# MeyerScan

./: .gitignore  CMakeLists.txt  MeyerScan_AllModules.sln  README.md
MyAutoExposure/: AutoExposureTest.vcxproj  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  MeyerScan_AutoExposure.sln  MeyerScan_AutoExposure.vcxproj  README.md
MyAutoExposure/include/: AutoExposure.h
MyAutoExposure/src/: Version.rc
MyAutoExposure/test/: main.cpp
MyCalibration3DUI/: CHANGELOG.md  CMakeLists.txt  Calibration3DUITest.vcxproj  MeyerScan_Calibration3DUI.sln  MeyerScan_Calibration3DUI.vcxproj  README.md
MyCalibration3DUI/include/: Calibration3DUI.h
MyCalibration3DUI/src/: Calibration3DUIImpl.cpp  Calibration3DUIImpl.h  Version.rc
MyCalibration3DUI/test/: main.cpp
MyCalibrationColorUI/: CHANGELOG.md  CMakeLists.txt  CalibrationColorUITest.vcxproj  MeyerScan_CalibrationColorUI.sln  MeyerScan_CalibrationColorUI.vcxproj  README.md
MyCalibrationColorUI/include/: CalibrationColorUI.h
MyCalibrationColorUI/src/: CalibrationColorUIImpl.cpp  CalibrationColorUIImpl.h  Version.rc
MyCalibrationColorUI/test/: main.cpp
MyCaptureImagePipeline/: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CaptureImagePipelineTest.vcxproj  MeyerScan_CaptureImagePipeline.sln  MeyerScan_CaptureImagePipeline.vcxproj  README.md
MyCaptureImagePipeline/include/: CaptureImagePipeline.h
MyCaptureImagePipeline/src/: Version.rc
MyCaptureImagePipeline/test/: main.cpp
MyCaptureProcessing/: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CaptureProcessingTest.vcxproj  MeyerScan_CaptureProcessing.sln  MeyerScan_CaptureProcessing.vcxproj  README.md
MyCaptureProcessing/include/: CaptureProcessing.h
MyCaptureProcessing/src/: Version.rc
MyCaptureProcessing/test/: main.cpp
MyCaptureService/: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CaptureServiceTest.vcxproj  MeyerScan_CaptureService.sln  MeyerScan_CaptureService.vcxproj  README.md
MyCaptureService/include/: CaptureService.h
MyCaptureService/src/: Version.rc
MyCaptureService/test/: CaptureImageView.cpp  CaptureImageView.h  CaptureServiceTestController.cpp  CaptureServiceTestController.h  Version.rc  (+3 more)
MyCaseOrderService/: CHANGELOG.md  CMakeLists.txt  CaseOrderServiceTest.vcxproj  MeyerScan_CaseOrderService.sln  MeyerScan_CaseOrderService.vcxproj  README.md
MyCaseUI/: CHANGELOG.md  CMakeLists.txt  CaseUITest.vcxproj  CaseUITest.vcxproj.filters  MeyerScan_CaseUI.sln  MeyerScan_CaseUI.vcxproj  MeyerScan_CaseUI.vcxproj.filters  README.md
MyConfigCenter/: CHANGELOG.md  CMakeLists.txt  ConfigCenterTest.vcxproj  MeyerScan_ConfigCenter.sln  MeyerScan_ConfigCenter.vcxproj  README.md
MyDataProcessUI/: CHANGELOG.md  CMakeLists.txt  DataProcessUITest.vcxproj  MeyerScan_DataProcessUI.sln  MeyerScan_DataProcessUI.vcxproj  README.md
MyDatabase/: .gitignore  CHANGELOG.md  CMakeLists.txt  DatabaseTest.vcxproj  DatabaseTest.vcxproj.filters  MeyerScan_Database.sln  MeyerScan_Database.vcxproj  MeyerScan_Database.vcxproj.filters  README.md
MyDatabaseQtAdapter/: CHANGELOG.md  CMakeLists.txt  DatabaseQtAdapterTest.vcxproj  MeyerScan_DatabaseQtAdapter.sln  MeyerScan_DatabaseQtAdapter.vcxproj  README.md
MyDeviceCmd/: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DeviceCmdTest.vcxproj  DeviceCmdTest.vcxproj.filters  MeyerScan_DeviceCmd.sln  MeyerScan_DeviceCmd.vcxproj  MeyerScan_DeviceCmd.vcxproj.filters  README.md
MyDeviceTransport/: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  DeviceTransportTest.vcxproj  DeviceTransportTest.vcxproj.filters  MeyerScan_DeviceTransport.sln  MeyerScan_DeviceTransport.vcxproj  MeyerScan_DeviceTransport.vcxproj.filters  README.md
MyExternalLaunchAdapter/: CHANGELOG.md  CMakeLists.txt  ExternalLaunchAdapterTest.vcxproj  MeyerScan_ExternalLaunchAdapter.sln  MeyerScan_ExternalLaunchAdapter.vcxproj  README.md
MyHomeUI/: CHANGELOG.md  CMakeLists.txt  HomeUITest.vcxproj  HomeUITest.vcxproj.filters  MeyerScan_HomeUI.sln  MeyerScan_HomeUI.vcxproj  MeyerScan_HomeUI.vcxproj.filters  README.md
MyLogger/: .gitignore  CHANGELOG.md  CMakeLists.txt  LoggerTest.vcxproj  LoggerTest.vcxproj.filters  MeyerScan_Logger.sln  MeyerScan_Logger.vcxproj  MeyerScan_Logger.vcxproj.filters  README.md
MyMainExe/: CHANGELOG.md  CMakeLists.txt  MeyerScan.vcxproj  MeyerScan.vcxproj.filters  MeyerScan_MainExe.sln  README.md
MyOrderCreateUI/: CHANGELOG.md  CMakeLists.txt  MeyerScan_OrderCreateUI.sln  MeyerScan_OrderCreateUI.vcxproj  OrderCreateUITest.vcxproj  README.md  copy_treatment_assets.cmake
MyOrderScanWorkspaceShell/: CHANGELOG.md  CMakeLists.txt  MeyerScan_OrderScanWorkspaceShell.sln  MeyerScan_OrderScanWorkspaceShell.vcxproj  OrderScanWorkspaceShellTest.vcxproj  README.md
MyPermission/: CHANGELOG.md  CMakeLists.txt  MeyerScan_Permission.sln  MeyerScan_Permission.vcxproj  PermissionTest.vcxproj  README.md
MyRuntimeDataCenter/: CHANGELOG.md  CMakeLists.txt  MeyerScan_RuntimeDataCenter.sln  MeyerScan_RuntimeDataCenter.vcxproj  README.md  RuntimeDataCenterTest.vcxproj
MyScanReconstructStudio/: CHANGELOG.md  CMakeLists.txt  MeyerScan_ScanReconstructStudio.sln  MeyerScan_ScanReconstructStudio.vcxproj  README.md  ScanReconstructStudio.vcxproj
MyScanSchemaService/: CHANGELOG.md  CMakeLists.txt  MeyerScan_ScanSchemaService.sln  MeyerScan_ScanSchemaService.vcxproj  README.md  ScanSchemaServiceTest.vcxproj
MyScanWorkflowUI/: CHANGELOG.md  CMakeLists.txt  MeyerScan_ScanWorkflowUI.sln  MeyerScan_ScanWorkflowUI.vcxproj  README.md  ScanWorkflowUITest.vcxproj
MySendUI/: CHANGELOG.md  CMakeLists.txt  MeyerScan_SendUI.sln  MeyerScan_SendUI.vcxproj  README.md  SendUITest.vcxproj
MySettingsUI/: CHANGELOG.md  CMakeLists.txt  MeyerScan_SettingsUI.sln  MeyerScan_SettingsUI.vcxproj  README.md  SettingsUITest.vcxproj
MyUIComponents/: CHANGELOG.md  CMakeLists.txt  MeyerScan_UIComponents.sln  MeyerScan_UIComponents.vcxproj  README.md  UIComponentsTest.vcxproj
MyUIResources/: .gitignore  CHANGELOG.md  CMakeLists.txt  MeyerScan_UIResources.sln  MeyerScan_UIResources.vcxproj  README.md  UIResourcesTest.vcxproj
(+329 files in other folders)
